<resources>
    <string name="app_name">P01-DailyGoals</string>
    <string name="readup">Read up on materials before class</string>
    <string name="achieve">Did I achieve this goal today?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrive">Arrive on time so as not to miss important part of the lesson</string>
    <string name="attempt">Attempt the problem myself</string>
    <string name="personal">My personal reflection today</string>
    <string name="close">Close</string>
    <string name="enter">Enter your text here</string>
</resources>
